--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 weborder_url=http://secure.smartbearsoftware.com/samples/TestComplete11/WebOrders/Login.aspx
 weborder_username=Tester
 weborder_password=test
-browser=safari
+browser=chrome
