building out pom for google testing

--- a/config.properties
+++ b/config.properties
@@ -2,3 +2,4 @@ weborder_url=http://secure.smartbearsoftware.com/samples/TestComplete11/WebOrder
 weborder_username=Tester
 weborder_password=test
 browser=chrome
+google_url=https://google.com
