set up pom design for library app

--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,6 @@ weborder_username=Tester
 weborder_password=test
 browser=chrome
 google_url=https://google.com
+library_url=https://library2.cydeo.com/login.html
+library_login=librarian1@library
+library_password=libraryUser
